# elog

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Makefile  README  build  build.bat  buildsnap  buildsnap.bat  checklist.txt  elcode.js  elcode_en.html  elconv.c  elog.c  elog.nsi  elog.spec  elog_pad_file.xml  elogd.c  elogd.cfg  elogd.init  elogd.init_solaris  elogd.init_template  elogd.plist  elogd.service  elogd_fancy.cfg  eloghelp_br.html  eloghelp_en.html  eloghelp_ge.html  eloghelp_tu.html  eloghelp_zh.html  eloglang.brazilian  eloglang.bulgarian  eloglang.danish  eloglang.dutch  eloglang.french  eloglang.german  eloglang.italian  eloglang.japanese  eloglang.spanish  (+5 more)
NT/: elconv.dsp  elconv.mak  elconv.sln  elconv.vcproj  elconv.vcxproj  elog.dsp  elog.dsw  elog.mak  elog.sln  elog.vcproj  elog.vcxproj  elogd.dsp  elogd.dsw  elogd.mak  elogd.sln  elogd.vcproj  elogd.vcxproj  elogd.vcxproj.filters  locext.dsp  locext.dsw  locext.sln  locext.vcproj  locext.vcxproj
cmake/: FindOpenSSL.cmake  FindPAM.cmake  GitVersion.cmake  git-revision.h.in
contrib/: README  config.inc  elog2sql.txt  elogsubmit.js  elogsubmit.txt  mailelog.pl  mailelog.txt  parsecfg.pl  parselog.pl
doc/: CHANGELOG.TXT  ChangeLog  adminguide.html  config.html  contrib.html  dl-menu.html  dl-sig.html  download.html  elog.css  faq.html  index.html  index_d.html  index_nd.html  strftime.txt  userguide.html  wishlist.html
man/: elconv.1  elog.1  elogd.8
resources/: elcode_en.html  elcode_english.html  elcode_indonesia.html  elcode_zh_CN-GB2312.html  elcode_zh_CN-UTF8.html  elogd-zh_CN-GB2312.cfg  elogd-zh_CN-UTF8.cfg  eloghelp_brazilian.html  eloghelp_czech.html  eloghelp_da.html  eloghelp_danish.html  eloghelp_du.html  eloghelp_dutch.html  eloghelp_english.html  eloghelp_french.html  eloghelp_german.html  eloghelp_indonesia.html  eloghelp_italian.html  eloghelp_ja.html  eloghelp_japanese.html  eloghelp_polish.html  eloghelp_slovak.html  eloghelp_sp.html  eloghelp_spanish.html  eloghelp_swedish.html  eloghelp_turkish.html  eloghelp_zh_CN-GB2312.html  eloglang.brazilian  eloglang.bulgarian  eloglang.czech  eloglang.danish  eloglang.dutch  eloglang.french  eloglang.german  eloglang.german_UTF8  eloglang.indonesia  eloglang.italian  eloglang.japanese  eloglang.polish  eloglang.ru_CP1251  (+6 more)
resources/ssl/: server.key
scripts/: ckeditor-config.js  dnd.js  elcode.js  full-parser.js  im.js  load-ckeditor.js
scripts/bootstrap/css/: bootstrap-theme.css  bootstrap-theme.min.css  bootstrap.css  bootstrap.min.css  full.css
scripts/bootstrap/js/: bootstrap.js  bootstrap.min.js
scripts/ckeditor/: build-config.js  ckeditor.js  config.js
scripts/ckeditor/core/: env.js
scripts/ckeditor/lang/: af.js  ar.js  bg.js  bn.js  bs.js  ca.js  cs.js  cy.js  da.js  de.js  el.js  en-au.js  en-ca.js  en-gb.js  en.js  eo.js  es.js  et.js  eu.js  fa.js  fi.js  fo.js  fr-ca.js  fr.js  gl.js  gu.js  he.js  hi.js  hr.js  hu.js  id.js  is.js  it.js  ja.js  ka.js  km.js  ko.js  ku.js  lt.js  lv.js  (+26 more)
scripts/ckeditor/plugins/abbr/: plugin.js
scripts/ckeditor/plugins/clipboard/: plugin.js
scripts/ckeditor/plugins/dndfiles/: plugin.js
scripts/ckeditor/plugins/eqneditor/: plugin.js
scripts/ckeditor/plugins/fileupload/: plugin.js
scripts/ckeditor/plugins/fileupload/dialogs/: fileupload.js
scripts/ckeditor/plugins/floatpanel/: plugin.js
scripts/ckeditor/plugins/image2/: plugin.js
scripts/ckeditor/plugins/image2/dev/: contents.css  image2.html
scripts/ckeditor/plugins/image2/dialogs/: image2.js
scripts/ckeditor/plugins/image2/lang/: af.js  ar.js  bg.js  bn.js  bs.js  ca.js  cs.js  cy.js  da.js  de.js  el.js  en-au.js  en-ca.js  en-gb.js  en.js  eo.js  es.js  et.js  eu.js  fa.js  fi.js  fo.js  fr-ca.js  fr.js  gl.js  gu.js  he.js  hi.js  hr.js  hu.js  id.js  is.js  it.js  ja.js  ka.js  km.js  ko.js  ku.js  lt.js  lv.js  (+26 more)
scripts/ckeditor/plugins/link/: plugin.js
scripts/ckeditor/plugins/magicline/: plugin.js
scripts/ckeditor/plugins/save/: plugin.js
scripts/ckeditor/plugins/timestamp/: plugin.js
scripts/ckeditor/plugins/undo/: plugin.js
scripts/ckeditor/plugins/widget/: plugin.js
scripts/ckeditor/plugins/widget/lang/: eo.js  he.js  it.js  tt.js  vi.js
scripts/fckeditor/: fckelog.js
scripts/fckeditor/editor/plugins/elog/: fckplugin.js
scripts/fckeditor/editor/plugins/elogsubmit/: fckplugin.js
src/: auth.c  crypt.c  elconv.c  elog-version.h  elog.c  elogd.c  elogd.h  git-revision.h  locext.c  mxml.c  mxml.h  regex.c  strlcpy.c  strlcpy.h
ssl/: server.crt
themes/default/: compact.css  default.css  elog.css  first.psp  last.psp  next.psp  oldtheme.cfg  previous.psp  theme.cfg  tiny.css
xcode/elog.xcodeproj/: project.pbxproj
xcode/elogd.xcodeproj/: project.pbxproj
xcode/elogd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/elogd.xcodeproj/project.xcworkspace/xcshareddata/: elogd.xccheckout
xcode/elogd.xcodeproj/project.xcworkspace/xcuserdata/dmilicic.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/elogd.xcodeproj/xcuserdata/dmilicic.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/elogd.xcodeproj/xcuserdata/dmilicic.xcuserdatad/xcschemes/: elogd.xcscheme  xcschememanagement.plist
